--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,14 @@
 
-/* Your CSS Code here. */
+#btn{
+    background-color: black;
+    color:white;
+    border: none;
+    border-radius: 5px;
+
+}
+
+#btn:hover{
+    background-color: yellow;
+    border-radius: 30px;
+    color: black;
+}
